[gd_scene load_steps=10 format=3 uid="uid://dcigv8k7xprr"]

[ext_resource type="Script" path="res://scripts/settings.gd" id="1_81j71"]
[ext_resource type="FontFile" uid="uid://bjnjpjqu0xki1" path="res://asset/fonts/PixelOperator8-Bold.ttf" id="2_7w38j"]
[ext_resource type="Theme" uid="uid://c3m8iu7htchpa" path="res://resources/ui/ui.tres" id="3_1wokx"]
[ext_resource type="AudioStream" uid="uid://bkllmva6c8lev" path="res://asset/sounds/ui_click.wav" id="3_wtpqd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w7lil"]
bg_color = Color(0.3477, 0.4218, 0.57, 0.654902)
skew = Vector2(0.83, 0.03)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bbyyb"]
bg_color = Color(0.3477, 0.4218, 0.57, 0.654902)
skew = Vector2(0.83, 0.03)
shadow_color = Color(0.06, 0.06, 0.06, 0.215686)
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nqfyq"]
bg_color = Color(0.3477, 0.4218, 0.57, 0.654902)
skew = Vector2(0.83, 0.03)
shadow_color = Color(0.06, 0.06, 0.06, 0.215686)
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bytlo"]
bg_color = Color(0.3477, 0.4218, 0.57, 0.654902)
skew = Vector2(0.83, 0.03)
shadow_color = Color(0.06, 0.06, 0.06, 0.215686)
shadow_size = 3

[sub_resource type="Theme" id="Theme_dmlsj"]
Button/colors/font_color = Color(0.875, 0.875, 0.875, 1)
Button/colors/font_disabled_color = Color(0.875, 0.875, 0.875, 0.5)
Button/colors/font_focus_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_disabled_color = Color(1, 1, 1, 0.4)
Button/colors/icon_focus_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_normal_color = Color(1, 1, 1, 1)
Button/colors/icon_pressed_color = Color(1, 1, 1, 1)
Button/constants/align_to_largest_stylebox = 0
Button/constants/h_separation = 4
Button/constants/icon_max_width = 0
Button/constants/outline_size = 0
Button/font_sizes/font_size = 32
Button/fonts/font = ExtResource("2_7w38j")
Button/styles/disabled = null
Button/styles/focus = SubResource("StyleBoxFlat_w7lil")
Button/styles/hover = SubResource("StyleBoxFlat_bbyyb")
Button/styles/normal = SubResource("StyleBoxFlat_nqfyq")
Button/styles/pressed = SubResource("StyleBoxFlat_bytlo")

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_81j71")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.117647, 0.156863, 0.207843, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 70
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 70
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 10
theme = SubResource("Theme_dmlsj")
text = "Back"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 34
theme_override_constants/margin_bottom = 30

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Settings
"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Main menu music"

[node name="HSliderMain" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = -6.0
max_value = 6.0
step = 2.0
value = 6.0
tick_count = 7

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Music"

[node name="HSliderMusic" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_1wokx")
min_value = -6.0
max_value = 6.0
step = 2.0
rounded = true
tick_count = 7

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "SFX
"

[node name="HSliderSFX" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
min_value = -6.0
max_value = 6.0
step = 2.0
rounded = true
tick_count = 7

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_wtpqd")
volume_db = -8.0
bus = &"Sfx"
